--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -20,15 +20,29 @@
 <body>
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid" style="float:left !important; width: calc(100% - 70px) !important;">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                    <img class="logo-img" src="../images/Logo.png" alt="logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div id="togglers">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="btn-group" style="float:right;">
+                        <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                                    KHẨU</a></li>
+                            <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -43,17 +57,6 @@
                     </ul>
                 </div>
             </div>
-            <div class="btn-group" style="float:right; margin-right: 10px;">
-                <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="#">ĐỔI MẬT
-                            KHẨU</a></li>
-                    <li><a class="dropdown-item" href="#">ĐĂNG XUẤT</a>
-                    </li>
-                </ul>
-            </div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
@@ -66,50 +69,50 @@
                     <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <div id="package-filters" class="row">
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle text-black" type="button"
-                                id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                                Sắp xếp theo
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <li><button class="dropdown-item" type="button">Giá tăng dần</button></li>
-                                <li><button class="dropdown-item" type="button">Giá giảm dần</button></li>
-                                <li><button class="dropdown-item" type="button">Không</button></li>
-                            </ul>
-                        </div>
+                <div id="package-filters">
+
+                    <div class="dropdown filter">
+                        <button class="btn btn-secondary dropdown-toggle text-black" type="button" id="dropdownMenu2"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Sắp xếp theo
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <li><button class="dropdown-item" type="button">Giá tăng dần</button></li>
+                            <li><button class="dropdown-item" type="button">Giá giảm dần</button></li>
+                            <li><button class="dropdown-item" type="button">Không</button></li>
+                        </ul>
                     </div>
-                    <div class=" col-lg-4 col-md-12 col-sm-12">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle text-black" type="button"
-                                id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                                Lọc theo mức giá
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <li><button class="dropdown-item" type="button">Dưới 100,000đ</button></li>
-                                <li><button class="dropdown-item" type="button">100,000đ - 200,000đ</button></li>
-                                <li><button class="dropdown-item" type="button">200,000đ - 500,000đ</button></li>
-                                <li><button class="dropdown-item" type="button">Trên 500,000đ</button></li>
-                                <li><button class="dropdown-item" type="button">Không</button></li>
-                            </ul>
-                        </div>
+
+
+                    <div class="dropdown filter">
+                        <button class="btn btn-secondary dropdown-toggle text-black" type="button" id="dropdownMenu2"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Lọc theo mức giá
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <li><button class="dropdown-item" type="button">Dưới 100,000đ</button></li>
+                            <li><button class="dropdown-item" type="button">100,000đ - 200,000đ</button></li>
+                            <li><button class="dropdown-item" type="button">200,000đ - 500,000đ</button></li>
+                            <li><button class="dropdown-item" type="button">Trên 500,000đ</button></li>
+                            <li><button class="dropdown-item" type="button">Không</button></li>
+                        </ul>
                     </div>
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle text-black" type="button"
-                                id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                                Lọc theo loại sản phẩm
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <li><button class="dropdown-item" type="button">Thực phẩm tươi sống</button></li>
-                                <li><button class="dropdown-item" type="button">Rau củ quả</button></li>
-                                <li><button class="dropdown-item" type="button">Gia vị</button></li>
-                                <li><button class="dropdown-item" type="button">Đồ dùng nhà bếp</button></li>
-                                <li><button class="dropdown-item" type="button">Không</button></li>
-                            </ul>
-                        </div>
+
+
+                    <div class="dropdown filter">
+                        <button class="btn btn-secondary dropdown-toggle text-black" type="button" id="dropdownMenu2"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Lọc theo loại sản phẩm
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <li><button class="dropdown-item" type="button">Thực phẩm tươi sống</button></li>
+                            <li><button class="dropdown-item" type="button">Rau củ quả</button></li>
+                            <li><button class="dropdown-item" type="button">Gia vị</button></li>
+                            <li><button class="dropdown-item" type="button">Đồ dùng nhà bếp</button></li>
+                            <li><button class="dropdown-item" type="button">Không</button></li>
+                        </ul>
                     </div>
+
                 </div>
 
                 <div class="container text-center">
