--- a/CoCo/front-end/manager/statistics-page.html
+++ b/CoCo/front-end/manager/statistics-page.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="css/product-style.css">
-    <link rel="stylesheet" href="css/package-list-page.css">
-    <link rel="stylesheet" href="css/pagination.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/statistics-page.css">
+    <link rel="stylesheet" href="products/css/product-style.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <script src="data.json"></script>
@@ -21,8 +20,8 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img class="logo-img" src="../../images/Logo.png" alt="logo">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo-img" src="../images/Logo.png" alt="logo">
                 </a>
                 <div id="togglers">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,12 +32,12 @@
                     <div class="btn-group" style="float:right;">
                         <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
+                            <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="#">ĐỔI MẬT
                                     KHẨU</a></li>
-                            <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
+                            <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
                             </li>
                         </ul>
                     </div>
@@ -55,7 +54,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
-                                <li><a class="dropdown-item" href="./product-list-page.html">SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="products/product-list-page.html">SẢN PHẨM</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -68,66 +67,90 @@
                 </div>
             </div>
         </nav>
-        <img src="../../images/banner.png" alt="banner" class="banner">
+        <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
-                <a href="/nhu-yeu-pham">Nhu yếu phẩm > </a>
-                <a href="/danh-sach-goi-san-pham">Danh sách gói nhu yếu phẩm</a>
+                <a href="/nhu-yeu-pham">Thống kê </a>
             </div>
-            <div class="searchbar">
-                <input type="text" class="searchbar-input" placeholder="Tìm kiếm gói nhu yếu phẩm">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            <div class="filter">
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle text-black" type="button"
-                        id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                        Sắp xếp theo
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Số lượng người ở từng trạng thái theo thời gian
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Giá tăng dần</button></li>
-                        <li><button class="dropdown-item" type="button">Giá giảm dần</button></li>
-                        <li><button class="dropdown-item" type="button">Tên tăng dần</button></li>
-                        <li><button class="dropdown-item" type="button">Tên giảm dần</button></li>
-                        <li><button class="dropdown-item" type="button">Không</button></li>
-                    </ul>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <div class="options">
+                          <div>
+                              <label for="">Ngày bắt đầu</label>
+                              <input type="date">
+                          </div>
+                          <div>
+                            <label for="">Ngày kết thúc</label>
+                            <input type="date">
+                        </div>
+                        <div>
+                            <label for="">Dạng biểu đồ</label>
+                            <select name="chart-type">
+                                <option value="g">Tổng tích lũy</option>
+                                <option value="kg">Tổng từng ngày</option>
+                              </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle text-black" type="button"
-                        id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                        Lọc theo mức giá
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Số lượng chuyển trạng thái và khỏi bệnh
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Dưới 100,000đ</button></li>
-                        <li><button class="dropdown-item" type="button">100,000đ - 200,000đ</button></li>
-                        <li><button class="dropdown-item" type="button">200,000đ - 500,000đ</button></li>
-                        <li><button class="dropdown-item" type="button">Trên 500,000đ</button></li>
-                        <li><button class="dropdown-item" type="button">Không</button></li>
-                    </ul>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Số lượng tiêu thụ các gói nhu yếu phẩm
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Số lượng tiêu thụ nhu yếu phẩm
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Dư nợ, thanh toán
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
                 </div>
             </div>
-            <div id="table"></div>
-            <div class="page-container">
-                <button class="first-page" disabled>
-                  <i class="fas fa-angle-double-left"></i>
-                </button>
-                <button class="prev-page" disabled>
-                  <i class="fas fa-angle-left"></i>
-                </button>
-                <div id="pagination"></div>
-                <button class="next-page">
-                  <i class="fas fa-angle-right"></i>
-                </button>
-                <button class="last-page">
-                  <i class="fas fa-angle-double-right"></i>
-                </button>
-            </div>
-            <a href="add-product-page.html">
-                <div class="button-add">
-                    <i class="fa-solid fa-plus fa-3x"></i>
-                </div>
-            </a>
         </div>
 
         <footer class="footer">
@@ -147,7 +170,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="../../images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
@@ -162,8 +185,7 @@
             </div>
         </footer>
     </main>
-    <script src="javascript/package-list-page.js"></script>
-    <script src="./javascript/pagination.js"></script>
+
 </body>
 
 </html>
